compiler/testData/diagnostics/testsWithStdLib/annotations/publicField/publicFieldOnDelegatedProperty.kt
class C {
    private <!INAPPLICABLE_PUBLIC_FIELD!>@<!DEPRECATED_SYMBOL_WITH_MESSAGE!>publicField<!><!> val a: String by lazy { "A" }
}